fix: исправил повтор свойства align-self:center

--- a/blocks/gallery/__card-title/gallery__card-title.css
+++ b/blocks/gallery/__card-title/gallery__card-title.css
@@ -6,7 +6,6 @@
     font-size: 24px;
     line-height: 29px;
     align-self: center;
-    align-self: center;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
